NXT-2684: Minor code style improvements
NXT-2684 (Casing of space items cannot be changed by "rename" in Modern UI on Windows)